'user-add,list'